--- a/reactjs-frontend/src/App.css
+++ b/reactjs-frontend/src/App.css
@@ -7,3 +7,14 @@
     text-align: center;
     color: white;
 }
+
+.search__form input {
+    border: none;
+    outline: none;
+    background: transparent;
+}
+.search__form input {
+    width: 100%;
+    height: 42px;
+    padding-left: 15px;
+}
