--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -8,3 +8,27 @@
     height: 42px;
     padding-left: 15px;
 }
+
+
+.app-menu {
+    color: #000000;
+    height: 100vh;
+    width: 20rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 200;
+
+    transform: translateX(-100%);
+    transition: 0.3s;
+
+    position: fixed;
+    left: 0;
+    top: 0;
+
+    /*display: flex;*/
+    /*justify-content: center;*/
+}
+
+.menu-open {
+    transform: translateX(0%);
+    width: 20rem;
+}
